# intellij-rust-demo

./: Cargo.toml  expand_result.rs
src/: main.rs
