[package]
name = "intellij-rust-demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.28"
napi = { version = "2.13.2", default-features = false, features = [
    "napi6",
    "async",
] }
napi-derive = "2.13.0"
opendal = "0.39.0"
